--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Akhuwat Foundation",
   "version": "0.1.0",
-  "homepage": "https://Ashar-Ahmed11.github.io/Pervaiz-2nd-FrontEnd",
+  "homepage": "https://Ashar-Ahmed11.github.io/Donatr-FE",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
