--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
