--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
     "react-scroll-trigger": "^0.6.14",
     "web-vitals": "^2.1.4"
   },
